Fixed overflow

--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -1,7 +1,6 @@
 .container-fluid {
     padding-top: 6vh; 
     padding-bottom: 10vh; 
-    overflow: hidden;
 }
 
 .row {
